--- a/home.html
+++ b/home.html
@@ -88,10 +88,10 @@
       </div>
       <div id="interior_contenido">
         <div id="contenido_texto">
-          <p>Bienvenidos a Posada Boutique La Barrica.Un lugar tranquilo donde sentir la vida en San Rafael. Para quedarte a
+          <p>Bienvenidos a Posada Boutique <span style="font-family: BlackJar;font-size: 22px">La Barrica.</span> Un lugar tranquilo donde sentir la vida en San Rafael. Para quedarte a
             disfrutar o como punto de partida de tus excursiones y paseos por la zona.</p>
           <p>Mañanas brillantes y desayuno de campo.Pileta rodeada de verde. Atardeceres rosados al pie de las montañas. Un
-            fogón en la noche estrellada y canto de ranas.A un paso de sitios de gran belleza turística. </p>
+            fogón en la noche estrellada y canto de ranas. A un paso de sitios de gran belleza turística. </p>
         </div>
         <div id="contenido_foto">
           <p>
