--- a/nosotros.html
+++ b/nosotros.html
@@ -88,11 +88,9 @@
       <div id="interior_contenido">
         <div id="contenido_texto">
           <p>San Rafael es una ciudad de la provincia de Mendoza que combina la majestuosidad de su naturaleza con grandes desarrollos
-            industriales e infraestructuras hidroeléctricas, es el escenario perfecto para dar lugar a La Barrica Posada
+            industriales e infraestructuras hidroeléctricas, es el escenario perfecto para dar lugar a <span style="font-family: BlackJar;font-size: 22px">La Barrica</span> Posada
             Boutique. Un espacio agradable, lujoso y cómodo que promueve un concepto vanguardista con las atenciones y amenidades
-            de un dulce hogar.</p>
-          </br>
-          <p>Somos una familia con un emprendimiento turístico que se destaca por el compromiso y la calidez. Los invitamos
+            de un dulce hogar. Somos una familia con un emprendimiento turístico que se destaca por el compromiso y la calidez. Los invitamos
             a disfrutar de nuestro entorno natural y nuestra bella ciudad natal.</div>
         <div id="contenido_foto">
           <p>
