--- a/posada.html
+++ b/posada.html
@@ -90,14 +90,11 @@
       </div>
       <div id="interior_contenido">
         <div id="contenido_texto">
-          <p>Posada La Barrica es un hotel boutique de campo atendido por sus dueños. Un lugar donde combinamos campo, calidad
-            y confort. Posee tres habitaciones con sus modernos baños. &nbsp;Está ubicada en un lugar estratégico como punto
-            de partida para tus actividades, entre el centro y el Cañón del Atuel. </p>
-          <p>Todas las mañanas nos encontrarán guiándolos en lo que necesiten y sirviendo sus desayunos: </p>
-          <p>Jugo recién exprimido, frutas de estación, pan y facturas de campo, dulces caseros, distintos fiambres&nbsp;&nbsp;de
-            la zona, yogurt y cereales, alguna torta casera recién horneada, café, leche, infusiones… </p>
-          <p>Esperamos que puedan llevarse después de su estadía un poco de la calma y la belleza que nosotros descubrimos.</p>
-        </div>
+          <p>Posada <span style="font-family: BlackJar">La Barrica</span> es una posada boutique atendida por sus dueños. Un lugar donde combinamos campo, calidad
+            y confort.</p>
+          <p>Todas las mañanas nos encontrarán guiándolos en lo que necesiten y sirviendo sus desayunos: Jugo recién exprimido, frutas de estación, pan y facturas de campo, dulces caseros, distintos fiambres&nbsp;&nbsp;de
+            la zona, yogurt y cereales, alguna torta casera recién horneada, café, leche, infusiones.</p>
+          </div>
         <div id="contenido_foto">
           <p>
             <img src="images/posada.jpg" width="741" height="243">
