--- a/tarifasyconsultas.html
+++ b/tarifasyconsultas.html
@@ -208,6 +208,7 @@
               </table>
               <div class="body"> </div>
             </form>
+            <div id="legible">
             <p>
               <strong>Posada Boutique La Barrica</strong>
             </p>
@@ -230,6 +231,7 @@
                 <img src="images/whatsapp.svg" height="60px"></a>  
             </p>
           </div>
+        </div>
           </div>
             <script src="js/jquery-1.11.3.min.js.descarga" type="text/javascript"></script>
             <script src="js/jquery-ui-1.10.0.min.js.descarga" type="text/javascript"></script>
