--- a/ubicacion.html
+++ b/ubicacion.html
@@ -190,12 +190,12 @@
             </ul>
           </div>
           <div id="derecha">
-            <p>
+            <p >
               <strong>Teléfono: </strong>
               Argentina: 2604 536161/660454</br>
-              Exterior: +5492604 536161/660454 </br>LLlama para reservar ahora mismo</p>
+              Exterior: +5492604 536161/660454 </br>Llama para reservar ahora mismo</p>
           </div>
-        </div>
+        
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2993.901654841472!2d-68.35531328493464!3d-34.58549518046428!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967908fa645a998d%3A0xa607cbf68a305016!2sOrtubia%2C+5600+San+Rafael%2C+Mendoza%2C+Argentina!5e1!3m2!1sen!2sus!4v1524256011116"
           width="720" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
 
